# ros-yolo5

./: .gitignore  README.MD
assets/: index.tsx
src/camera_driver/: CMakeLists.txt  package.xml
src/camera_driver/src/: camera_driver.cpp  simple_pub.cpp
src/example/: CMakeLists.txt  package.xml
src/example/src/: BasicWorker.cpp  run_boilerplate_node.cpp
src/perception/: CMakeLists.txt  model.json  package.xml
src/perception/src/: colors.hpp  perception_node.cpp  sample_detector.cpp  tictoc.hpp
src/perception/src/configs/yolov5-5.0/: yolov5s6.cfg
