<?xml version="1.0"?>
<package>
  <name>camera_driver</name>
  <version>0.0.0</version>
  <description>ROS + Yolov5</description>
  <maintainer email="chengy@luokung.com">Will Cheng Yong</maintainer>
  <author email="chengy@luokung.com">Will Cheng Yong</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <test_depend>gtest</test_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
